--- a/Vinicius.VirtualStore.Domain/Vinicius.VirtualStore.Domain.csproj
+++ b/Vinicius.VirtualStore.Domain/Vinicius.VirtualStore.Domain.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Produtos.cs" />
+    <Compile Include="Entities\Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\EfDbContext.cs" />
     <Compile Include="Repository\RepositoryProducts.cs" />
