--- a/Vinicius.VirtualStore.Web/Vinicius.VirtualStore.Web.csproj
+++ b/Vinicius.VirtualStore.Web/Vinicius.VirtualStore.Web.csproj
@@ -131,6 +131,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Produto\Index.cshtml" />
     <Content Include="Views\Showcase\ProductsList.cshtml" />
+    <Content Include="Views\Shared\_DetailsProducts.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
