--- a/Vinicius.VirtualStore.UnitTest/Vinicius.VirtualStore.UnitTest.csproj
+++ b/Vinicius.VirtualStore.UnitTest/Vinicius.VirtualStore.UnitTest.csproj
@@ -79,7 +79,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="TestCartItems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
