--- a/Vinicius.VirtualStore.Web/Vinicius.VirtualStore.Web.csproj
+++ b/Vinicius.VirtualStore.Web/Vinicius.VirtualStore.Web.csproj
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ProdutoController.cs" />
     <Compile Include="Controllers\ShowcaseController.cs" />
