--- a/Vinicius.VirtualStore.Domain/Vinicius.VirtualStore.Domain.csproj
+++ b/Vinicius.VirtualStore.Domain/Vinicius.VirtualStore.Domain.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Cart.cs" />
+    <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\EfDbContext.cs" />
