--- a/Vinicius.VirtualStore.Web/Vinicius.VirtualStore.Web.csproj
+++ b/Vinicius.VirtualStore.Web/Vinicius.VirtualStore.Web.csproj
@@ -143,6 +143,7 @@
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Cart\Resume.cshtml" />
     <Content Include="Views\Cart\CloseOrder.cshtml" />
+    <Content Include="Views\Cart\OrderCompleted.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
